# PySLMPClient

./: LICENSE  PICS.rst  readme.rst  setup.cfg
.github/workflows/: pythonpackage.yml  pythonpublish.yml  pythonpublish35.yml
doc/doctrees/: const.doctree  environment.pickle  index.doctree  pyslmpclient.doctree  util.doctree
doc/html/: .buildinfo  const.html  genindex.html  index.html  objects.inv  py-modindex.html  pyslmpclient.html  search.html  searchindex.js  util.html
doc/html/_sources/: const.rst.txt  index.rst.txt  pyslmpclient.rst.txt  util.rst.txt
doc/source/: conf.py  index.rst
pyslmpclient/: __init__.py  const.py  util.py
tests/: test_main.py  test_util.py
