# -*- coding: utf-8 -*-
[metadata]
name = PySLMPClient
version = attr: pyslmpclient.VERSION
description = 三菱電機のSLMP (Seamless Message Protocol)のクライアント
author = Masahiro HASEGAWA
author-email = hasegawa_masahiro@khi.co.jp
url = https://github.com/masahase0117/PySLMPClient
license = BSD License
license-file = LICENSE
platform = any
keywords = PLC, SLMP, MC Protocol, CC-Link IE, CC-Link, Ethernet, TCP, UDP
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: Console
    Natural Language:: Japanese
    Operating System :: POSIX :: Linux
    Topic :: Utilities
    Intended Audience :: Manufacturing
long_description = file: readme.rst

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.5
packages = pyslmpclient
test_suite = tests
setup_requires =
    setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires = NumPy
tests_require =
entry_points = file: entry_points.cfg

[bdist_wheel]

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 79
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
ignore = H301, H405

[tool.black]
line-length = 79
target-version = py35